--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -7,8 +7,8 @@
     tools:context="com.codepath.apps.restclienttemplate.TimelineActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="384dp"
-        android:layout_height="511dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
