Displayed the timestamp.

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -31,4 +31,12 @@
         android:layout_below="@+id/tvUserName"
         android:text="TextView"
         android:layout_alignStart="@+id/tvUserName" />
+
+    <TextView
+        android:id="@+id/tvTimeStamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
 </RelativeLayout>
