--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="toolbarBackground">#1DA1F2</color>
+    <color name="toolbarBackground">#1da1f2</color>
 </resources>
