--- a/app/src/main/res/layout/fragment_new_tweet.xml
+++ b/app/src/main/res/layout/fragment_new_tweet.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:background="@android:color/holo_blue_light"
-        android:id="@+id/ivProfileImage"
+        android:id="@+id/ivMyProfileImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true" />
@@ -17,25 +17,26 @@
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivProfileImage"
+        android:layout_below="@+id/ivMyProfileImage"
         android:background="@android:color/holo_red_dark"
         android:hint="What's happening?" />
 
     <TextView
-        android:id="@+id/tvUserName"
+        android:id="@+id/tvMyUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/ivProfileImage"
+        android:layout_toEndOf="@+id/ivMyProfileImage"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/tvScreenName"
+        android:id="@+id/tvMyScreenName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvUserName"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_below="@+id/tvMyUserName"
+        android:layout_toEndOf="@+id/ivMyProfileImage"
+        android:layout_marginStart="16dp" />
 
     <Button
         android:id="@+id/btnPost"
@@ -46,6 +47,14 @@
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="56dp"
         android:text="TWEET" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvMyUserName"
+        android:layout_toEndOf="@+id/ivMyProfileImage"
+        android:text="\@" />
 
 
 </RelativeLayout>
