--- a/app/src/main/res/layout/fragment_new_tweet.xml
+++ b/app/src/main/res/layout/fragment_new_tweet.xml
@@ -39,7 +39,8 @@
         android:layout_marginStart="16dp" />
 
     <Button
-        android:id="@+id/btnPost"
+        android:onClick="onTweet"
+        android:id="@+id/btnTweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
