--- a/app/src/main/res/layout/fragment_new_tweet.xml
+++ b/app/src/main/res/layout/fragment_new_tweet.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_marginTop="@dimen/etMargin"
+        android:layout_marginLeft="@dimen/etMargin"
         android:background="@android:color/holo_blue_light"
         android:id="@+id/ivMyProfileImage"
         android:layout_width="100dp"
@@ -12,16 +14,20 @@
         android:layout_alignParentTop="true" />
 
     <EditText
-        android:gravity="center"
         android:id="@+id/etCompose"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:layout_below="@+id/ivMyProfileImage"
-        android:background="@android:color/holo_red_dark"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/etMargin"
+        android:layout_marginRight="@dimen/etMargin"
+        android:layout_marginTop="@dimen/etMargin"
+        android:background="@android:color/transparent"
+        android:gravity="top"
         android:hint="What's happening?" />
 
     <TextView
+        android:layout_marginTop="@dimen/etMargin"
         android:id="@+id/tvMyUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,11 +49,9 @@
         android:id="@+id/btnTweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="56dp"
-        android:text="TWEET" />
+        android:text="TWEET"
+        android:layout_below="@+id/etCompose"
+        android:layout_alignEnd="@+id/etCompose" />
 
     <TextView
         android:id="@+id/textView"
@@ -56,6 +60,4 @@
         android:layout_below="@+id/tvMyUserName"
         android:layout_toEndOf="@+id/ivMyProfileImage"
         android:text="\@" />
-
-
 </RelativeLayout>
