Complete basic profile activitylayout and actionbar. Use bundle to communicate between fragments activities.Put the screenName from the result of API call in arguments.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:onClick="onProfileView"
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_person_white_24dp"
+        android:title="Item"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/miCompose"
         android:icon="@drawable/ic_compose"
         app:showAsAction="ifRoom"
